welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var L = nums.lenght
               ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to L-1){
         ^